feat(model): create model api
A POST restful api that creates a new job and invokes the ingestion flow

#1
