# openapi3.yaml
@@ -1,41 +1,40 @@
 openapi: 3.0.1
 info:
-  title: service-name
-  description: basic template for map colonies service
+  title: 3d model ingestion service
+  description: Uploading new 3d models
   version: 1.0.0
   license:
     name: MIT
     url: https://opensource.org/licenses/MIT
 servers:
-  - url: http://localhost:8080
+  - url: http://localhost:8082
 paths:
-  /resourceName:
-    get:
-      operationId: getResourceName
-      tags:
-        - resourceName
-      summary: gets the resource
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/resource'
+  /models:
     post:
-      operationId: createResource
+      operationId: createModel
+      summary: Creates a new job and invokes a new model ingestion flow
       tags:
-        - resourceName
-      summary: creates a new record of type resource
+        - models
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/payload'
       responses:
         201:
-          description: created
+          description: Created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/resource'
+                $ref: '#/components/schemas/model'
         400:
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+        '5XX':
+          description: Unexpected Error
           content:
             application/json:
               schema:
@@ -49,17 +48,140 @@ components:
       properties:
         message:
           type: string
-    resource:
+    payload:
       type: object
+      description: 3d model payload
       required:
-        - id
-        - name
-        - description
+        - path
+        - metadata
       properties:
-        id:
-          type: number
-          format: int64
-        name:
+        path:
           type: string
+          description: Files location path
+        metadata:
+          $ref: '#/components/schemas/metadata'
+    model:
+      type: object
+      description: 3d model metadata for 3d model upload
+      required:
+        - path
+        - metadata
+      properties:
+        modelId:
+          type: string
+          format: uuid
+          description: Ingestion model unique identifier
+        jobId:
+          type: string
+          format: uuid
+          description: Ingestion job unique identifier
+        path:
+          type: string
+          description: Files location path
+        metadata:
+          $ref: '#/components/schemas/metadata'
+    metadata:
+      type: object
+      description: 3d tiles metadata
+      required:
+        - productId
+        - productName
+        - geographicArea
+        - productVersion
+        - productType
+        - extentLowerLeft
+        - extentUpperRight
+        - SourceDateStart
+        - SourceDateEnd
+        - producerName
+        - SRS
+        - accuracyLE90
+        - horizontalAccuracyCE90
+        - relativeAccuracyLE90
+        - sensor
+        - productionSystem
+      properties:
+        productId:
+          type: string
+          description: Product's unique identifier
+        productName:
+          type: string
+          description: Product name
+        geographicArea:
+          type: string
+          description: Emergence geographic area name
+        productVersion:
+          type: number
+          description: Product version
+          default: 1
+        productType:
+          type: string
+          description: Product type
+          enum:
+            - 3DModel
+          default: 3DModel
         description:
           type: string
+          description: Product description
+        classification:
+          type: string
+          description: Product classification
+        footprint:
+          type: string
+          description: Geographical delineation of the product
+        extentLowerLeft:
+          type: string
+          description: Bottom left point of a blocking rectangle
+        extentUpperRight:
+          type: string
+          description: Top right point of a blocking rectangle
+        SourceDateStart:
+          type: string
+          description: Date of oldest source material
+          format: date-time
+        SourceDateEnd:
+          type: string
+          description: Date of latest source material
+          format: date-time
+        producerName:
+          type: string
+          description: The organization that produced/supplied the product
+          enum:
+            - IDFMU
+          default: IDFMU
+        SRS:
+          type: string
+          description: The product reference system, including a vertical data
+        SRSOrigin:
+          type: string
+          description: Axis system center in which the coordinate is displayed
+        nominalResolution:
+          type: string
+          description: Number of points per unit of area
+        accuracyLE90:
+          type: string
+          description: LE90 of the height values
+        horizontalAccuracyCE90:
+          type: string
+          description: CE90 of location of elevation points
+        relativeAccuracyLE90:
+          type: string
+          description: LE90 of distance measurement
+        heightRangeFrom:
+          type: number
+          description: The minimum height
+        heightRangeTo:
+          type: number
+          description: The maximum height
+        sensor:
+          type: array
+          items:
+            type: string
+          description: The sensor used as the source of the product (possibly more than one)
+        productionMethod:
+          type: string
+          description: Method of extracting altitude data
+          default: Photogrammetric
+        productionSystem:
+          type: string
+          description: Production system
